# 21shellfinal

./: CMakeLists.txt  Makefile  README.md  author  what
ft_printf/: Makefile  author
ft_printf/includes/: ft_printf.h  get_next_line.h  libft.h
ft_printf/srcs/: add_buff.c  add_char.c  add_d.c  add_str.c  ft_add_c_s_d.c  ft_add_double.c  ft_dtoa.c  ft_itoa_base_c.c  ft_math.c  ft_okr_double.c  ft_oxu.c  ft_pars.c  ft_pars2.c  ft_pointer.c  ft_pr_help.c  ft_printf.c
inc/: ft_ls.h
lexer/: lexer.c
libft/: ft_printf.c  ft_strdup.c  ft_strjoinch_i.c  ft_strndup.c  ft_strstr.c  ft_strsub.c
parser/: main_parser.c
src/: additional_funcs.c  cd_builtin.c  complete_list.c  complete_list_2.c  dop_func.c  echo_builtin.c  echo_strsplit.c  env_builtin.c  free_str.c  ft_exe.c  ft_ls.c  ft_signal.c  ft_strjoin_safe.c  ft_take_arg.c  get_flags.c  handle_errors.c  lenmas.c  main.c  print_errors.c  print_result.c  sort.c  sort_args.c
src/builtins/: ft_cd.c  ft_echo.c  ft_echo2.c  ft_env.c
src/exec/: ft_do_pipe.c  ft_fun_fork.c
src/lexer/: lexer.c
src/nucleus/: ft_read_8.c  nucleus.c
src/parser/: main_parser.c
